lectures/lec7/k8s/apple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: apple
