lectures/lec7/k8s/banana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: banana
