lectures/lec7/k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80          # Порт, на якому доступний сервіс всередині кластера
      targetPort: 8080  # Порт, на якому слухає додаток у контейнері
  type: ClusterIP
